--- a/Playground/Evaluate_Answers/Evaluate_answers.ipynb
+++ b/Playground/Evaluate_Answers/Evaluate_answers.ipynb
@@ -10,18 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from commonfunctions import *\n",
     "\n",
@@ -719,6 +710,18 @@
     "grade = (modelAnwsers == currAnswers)\n",
     "\n",
     "print('Grade: ' + str(grade.sum()) + '/' + str(len(grade)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get ID\n",
+    "image = io.imread('test data/test_1.jpeg')\n",
+    "plt.figure(figsize=(15, 15)); plt.imshow(perspective_correction(image)[0])\n",
+    "idd = get_id(image, id_length=7, show_info=False)"
    ]
   },
   {
